<resources>
    <string name="app_name">Piggy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_categories">Categories</string>
    <string name="title_beneficiaries">Beneficiaries</string>
    <string name="button_sign_in">Sign in</string>
    <string name="link_register">I do not have an account. Yet...</string>
    <string name="remember_credentials">Remember credentials</string>
    <string name="hint_instance_domain">Instance domain</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">E-mail address</string>
    <string name="fragment_title_login">Login</string>
    <string name="fragment_title_register">Register</string>
    <string name="hint_password_confirm">Confirm your password</string>
    <string name="button_sign_up">Sign up</string>
    <string name="link_login">Have a deja-vu? Try logging in instead...</string>
    <string name="title_properties">Properties</string>
    <string name="title_budget">Budget</string>
    <string name="title_increment">Increment value</string>
    <string name="title_decrement">Decrement value</string>
    <string name="variation_value_hint">Variation amount</string>
    <string name="date_hint">Date</string>
    <string name="notes_hint">Any additional notes?</string>
    <string name="button_add_variation">Add variation</string>
    <string name="type_in">Income</string>
    <string name="type_out">Outcome</string>
    <string name="title_accounts">Accounts</string>
    <string name="account_type_cash">Cash</string>
    <string name="account_type_bank_account">Bank account</string>
    <string name="account_type_investments">Investments</string>
    <string name="account_type_voucher">Voucher</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="initial_value_hint">Initial value</string>
    <string name="button_add_property">Add property</string>
    <string name="name_hint">Name</string>
    <string name="title_new_property">New property</string>
    <string name="update_property">Update property</string>
    <string name="banner_no_accounts">No accounts to show</string>
    <string name="banner_no_beneficiaries">No beneficiaries to show</string>
    <string name="banner_no_categories">No categories to show</string>
    <string name="banner_no_properties">No properties to show</string>
    <string name="banner_no_operations">There are no operations in this account</string>
    <string name="title_new_account">New account</string>
    <string name="title_new_beneficiary">New beneficiary</string>
    <string name="title_new_category">New category</string>
    <string name="initial_balance_hint">Initial balance</string>
    <string name="opening_hint">Date of opening</string>
    <string name="closing_hint">Date of closing</string>
    <string name="button_add_account">Add account</string>
    <string name="color_picker_description">Open color picker</string>
    <string name="button_add_beneficiary">Add beneficiary</string>
    <string name="button_update_beneficiary">Update beneficiary</string>
    <string name="domain_hint">Company domain</string>
    <string name="type_people">People</string>
    <string name="type_companies">Companies</string>
    <string name="type_generic">Generic</string>
    <string name="title_new_transaction">New transaction</string>
    <string name="update_transaction">Update transaction</string>
    <string name="value_hint">Value</string>
    <string name="button_add_transaction">Add transaction</string>
    <string name="title_new_transfer">New transfer</string>
    <string name="button_add_transfer">Add transfer</string>
    <string name="update_transfer">Update transfer</string>
    <string name="type_to">Give to...</string>
    <string name="type_from">Take from...</string>
    <string name="checked">Have you already checked the transaction?</string>
    <string name="card_edit_hint">Touch the image to edit</string>
    <string name="children_categories">%1$d children categories</string>
    <string name="button_add_category">Add category</string>
    <string name="button_update_category">Update category</string>
    <string name="virtual_switch_hint">Hide this category in the written reports</string>
    <string name="category_picker_no_selection">No category selected</string>
    <string name="hint_long_press_to_clear">%1$s.\nLong press to clear selection.</string>
    <string name="december">December</string>
    <string name="november">November</string>
    <string name="october">October</string>
    <string name="september">September</string>
    <string name="august">August</string>
    <string name="july">July</string>
    <string name="june">June</string>
    <string name="may">May</string>
    <string name="april">April</string>
    <string name="march">March</string>
    <string name="february">February</string>
    <string name="january">January</string>
    <string name="hint_overall_budget">Overall budget</string>
    <string name="chip_budget_yearly">Yearly</string>
    <string name="chip_budget_monthly">Monthly</string>
    <string name="chip_budget_monthly_customized">Monthly (customized)</string>
    <string name="subtitle_budget">Budget</string>
    <string name="subtitle_recent_accounts">Recent accounts</string>
    <string name="description_show_children_categories">Show children categories</string>
    <string name="logout">Logout</string>
    <string name="parent_category_subtitle">Parent category (optional)</string>
    <string name="parent_category_optional_explanation">If you do not specify a parent category, then the new category will be treated as a new root category.</string>
    <string name="nodata_bottom_sheet_search">There is nothing here!</string>
    <string name="search">Search...</string>
    <string name="update_account">Update account</string>
    <string name="material_you">Material You</string>
    <string name="change_theme">Change theme</string>
    <string name="add_a_new_resource">Add a new resource</string>
    <string name="add_a_transaction">Add a transaction</string>
    <string name="new_transaction">New transaction</string>
    <string name="add_a_transfer">Add a transfer</string>
    <string name="delete_this_account">Delete this account</string>
    <string name="edit_this_account">Edit this account</string>
    <string name="delete_this_beneficiary">Delete this beneficiary</string>
    <string name="edit_this_beneficiary">Edit this beneficiary</string>
    <string name="delete_this_category">Delete this category</string>
    <string name="edit_this_category">Edit this category</string>
    <string name="delete_this_property">Delete this property</string>
    <string name="edit_this_property">Edit this property</string>
    <string name="delete_this_transaction">Delete this transaction</string>
    <string name="edit_this_transaction">Edit this transaction</string>
    <string name="delete_this_transfer">Delete this transfer</string>
    <string name="edit_this_transfer">Edit this transfer</string>
    <string name="no_beneficiary_selected">No beneficiary selected</string>
    <string name="new_chart">New chart</string>
    <string name="chart_type_top_list">Top list</string>
    <string name="chart_type_history">History</string>
    <string name="subtitle_in_out_history">In / Out History</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="line">Line</string>
    <string name="bar_column">Bar / Column</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="beneficiaries">Beneficiaries</string>
    <string name="categories">Categories</string>
    <string name="accounts">Accounts</string>
    <string name="timeframe_all_time">All time</string>
    <string name="timeframe_last_year">Last year</string>
    <string name="timeframe_last_month">Last month</string>
    <string name="add_chart">Add chart</string>
    <string name="sum">Sum</string>
    <string name="count">Count</string>
    <string name="average">Average</string>
    <string name="max">Max</string>
    <string name="subtitle_top_list_options">Top list options</string>
    <string name="prefix_value">€</string>
</resources>