<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item-->
<!--        android:id="@+id/navigation_home"-->
<!--        android:icon="@drawable/ic_home_24"-->
<!--        android:title="@string/title_home" />-->

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_card_24"
        android:title="@string/title_accounts" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_categories_24"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_beneficiaries"
        android:icon="@drawable/ic_beneficiaries_24"
        android:title="@string/title_beneficiaries" />

    <item
        android:id="@+id/navigation_properties"
        android:icon="@drawable/ic_properties_24"
        android:title="@string/title_properties" />

    <item
        android:id="@+id/navigation_budget"
        android:icon="@drawable/ic_budget_24"
        android:title="@string/title_budget" />

</menu>