<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fragment_padding">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/add_title"
            style="@style/fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_chart" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/progress_initial_api_request" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_chart_type"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/button_top_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chart_type_top_list"
                app:icon="@drawable/ic_top_list_24"
                app:iconGravity="textStart"
                />
            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/button_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chart_type_history"
                app:icon="@drawable/ic_line_chart_24"
                app:iconGravity="textStart"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <LinearLayout
            android:id="@+id/layout_history"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="visible">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/fragment_subtitle"
                android:text="@string/subtitle_in_out_history"
                />
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_interval"
                app:singleSelection="true"
                app:selectionRequired="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/interval_monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monthly"
                    />
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/interval_yearly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yearly"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_kind"
                app:singleSelection="true"
                app:selectionRequired="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/kind_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/line"
                    />
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/kind_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bar_column"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_filter"
                app:singleSelection="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/filter_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/account"
                    />
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/filter_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category"
                    />
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/filter_beneficiary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/beneficiary"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>
            <include
                android:id="@+id/card_account"
                layout="@layout/card_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggle_transfer_type" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/beneficiary_selector"
                tools:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/card_beneficiary"
                    layout="@layout/card_beneficiary"
                    android:layout_width="96dp"
                    android:layout_height="0dp"
                    android:layout_marginVertical="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/beneficiary_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/inter_bold"
                    android:maxLines="1"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@id/beneficiary_edit_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/card_beneficiary"
                    app:layout_constraintTop_toTopOf="@id/card_beneficiary"
                    tools:text="Beneficiary name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/beneficiary_edit_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/inter_light"
                    android:text="@string/card_edit_hint"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/card_beneficiary"
                    app:layout_constraintTop_toBottomOf="@id/beneficiary_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <dev.ivanravasi.piggy.ui.common.views.CategoryPicker
                tools:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pick_category" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_top_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="gone"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/fragment_subtitle"
                android:text="@string/subtitle_top_list_options"
                />
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_timeframe"
                app:singleSelection="true"
                app:selectionRequired="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/timeframe_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timeframe_all_time"
                    />
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/timeframe_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timeframe_last_year"
                    />
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/timeframe_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timeframe_last_month"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_domain"
                app:singleSelection="true"
                app:selectionRequired="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/domain_beneficiaries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/beneficiaries"
                    />
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/domain_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/categories"
                    />
                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/domain_accounts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accounts"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_statistic"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/stat_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sum"
                />
            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/stat_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/count"
                />
            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/stat_avg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/average"
                />
            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/stat_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/add_chart"
            style="@style/button_submit" />
    </LinearLayout>
</ScrollView>